Change to allow github url to be used.

--- a/com.olivestudio.utility/Editor/OliveStudio.Unity.Editor.asmdef
+++ b/com.olivestudio.utility/Editor/OliveStudio.Unity.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "UtilityUnityEditor",
+    "name": "OliveStudio.Unity.Editor",
     "rootNamespace": "",
     "references": [
         "Unity.Localization",
