--- a/com.olivestudio.utility/OliveStudio.Unity.asmdef
+++ b/com.olivestudio.utility/OliveStudio.Unity.asmdef
@@ -1,15 +1,16 @@
 {
-    "name": "UtilityUnityTests",
+    "name": "OliveStudio.Unity",
+    "rootNamespace": "",
     "references": [
-        "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner"
-      ],
+        "Unity.Localization",
+        "Unity.TextMeshPro"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": false,
+    "overrideReferences": true,
     "precompiledReferences": [],
-    "autoReferenced": false,
+    "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
