--- a/com.olivestudio.utility/package.json
+++ b/com.olivestudio.utility/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "com.olivegamestudio.utilityunity",
-  "displayName": "UtilityUnity",
+  "name": "com.olivestudio.unity",
+  "displayName": "OliveStudio.Unity",
   "version": "1.1.0",
   "unity": "2019.4",
   "dependencies": {
@@ -16,13 +16,9 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/olivegamestudio/Utility.Unity.git"
+    "url": "git+https://github.com/olivegamestudio/OliveStudio.Unity.git"
   },
   "keywords": [
-    "pilgrimage",
-    "quests",
-    "inventory",
-    "rewards"
   ],
   "description": "A collection of utility scripts for Unity games."
 }
