--- a/com.olivestudio.utility/Tests/OliveStudio.Unity.Tests.asmdef
+++ b/com.olivestudio.utility/Tests/OliveStudio.Unity.Tests.asmdef
@@ -1,16 +1,15 @@
 {
-    "name": "UtilityUnity",
-    "rootNamespace": "",
+    "name": "OliveStudio.Unity.Tests",
     "references": [
-        "Unity.Localization",
-        "Unity.TextMeshPro"
-    ],
+        "UnityEngine.TestRunner",
+        "UnityEditor.TestRunner"
+      ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": true,
+    "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": true,
+    "autoReferenced": false,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
