--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.olivestudio.unity",
   "displayName": "OliveStudio.Unity",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "unity": "2019.4",
   "dependencies": {
     "com.unity.textmeshpro": "3.0.9",
@@ -9,7 +9,7 @@
      "com.unity.test-framework": "1.1.31"
   },
   "author": {
-    "name": "Simon Jefferies",
+    "name": "OliveGameStudio",
     "email": "simon@olivegame.studio",
     "url": "https://www.olivegame.studio"
   },
