--- a/OliveStudio.Unity.asmdef
+++ b/OliveStudio.Unity.asmdef
@@ -2,6 +2,8 @@
     "name": "OliveStudio.Unity",
     "rootNamespace": "",
     "references": [
+        "Unity.Splines",
+        "Unity.Mathematics",
         "Unity.Localization",
         "Unity.TextMeshPro"
     ],
